# smartroute

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  install.sh  uninstall.sh
examples/: advanced.toml  basic.toml  gaming.toml  smartroute.toml
src/: autostart.rs  backup.rs  cli.rs  config.rs  config_editor.rs  daemon.rs  diagnosis.rs  dnstest.rs  doctor.rs  health.rs  killswitch.rs  leaktest.rs  lib.rs  main.rs  mask.rs  merge.rs  picker.rs  resolve.rs  runtime.rs  singbox.rs  subscription.rs  tester.rs  util.rs  whitelist.rs
systemd/: smartroute.service  smartroute@.service
